[package]
name = "lemonade"
version = "0.1.0"
authors = ["Sheheryar Parvaz <skipper308@hotmail.ca>"]

[dependencies]
cairo-sys-rs = "^0"
cairo-rs = { version = "^0", features = ["xcb"] }
pango = "^0"
pangocairo = "^0"
xcb = { version = "^0", features = ["thread"] }

# bin deps
regex = "^0"
clap = "^2"

[profile.release]
lto = false

[[bin]]
name = "lemonade"
path = "src/bin/main.rs"
